examples/test_package/Double_dc_full/steps/benchzebra_precise_run3/#test_analysis_1_result.txt
### Evaluation Report: Zebra Puzzle in ProbLog

---

#### **1. Document Title**
**Analysis of Zebra Puzzle Implementation in ProbLog**

---

#### **2. Background and Purpose**
The Zebra Puzzle is a classic logic puzzle where the goal is to determine the correct arrangement of houses and their attributes based on a set of given constraints. This report evaluates the implementation of the Zebra Puzzle in ProbLog, focusing on logical correctness, adherence to requirements, and error handling.

---

#### **3. Test Results Summary**
The provided code fails during execution with the following error:
```plaintext
Error evaluating Problog model:
    return exec_func(node_id=node_id, node=node, **kwdargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/zhenzhili/miniforge3/envs/langda/lib/python3.11/site-packages/problog/engine_stack.py", line 839, in eval_call
    raise UnknownClause(origin, location=loc)
problog.engine.UnknownClause: No clauses found for 'member/2' at 4:1.
```

**Key Observations:**
- The error indicates that the predicate `member/2` is not defined in the ProbLog program.
- No test results are available due to the failure.

---

#### **4. Failure Localization**
- **Failed Query:** The entire program fails because the `member/2` predicate is not defined.
- **Code Line:** The error occurs at line 4, where `member/2` is first used.
- **Impact:** The program cannot proceed without this predicate, as it is essential for checking membership in the list of houses.

---

#### **5. Root Cause Analysis**
- **Classical ProbLog Scenario:**
  - The `member/2` predicate is a standard Prolog predicate, but it is not included in the provided ProbLog code. ProbLog requires all predicates to be explicitly defined or imported.
  - The recursive termination of other predicates (e.g., `right_of/3`, `next_to/3`) is logically correct, but their functionality is irrelevant without `member/2`.

- **Probabilistic ProbLog Scenario:**
  - No probabilistic facts or rules are used in this implementation, so probabilistic correctness is not applicable here.
  - **DeepProbLog Feature:** Not used in this code.

---

#### **6. Overall Analysis**
- **Functional Requirements:**
  - **Classical Reasoning:** Partially met, but the missing `member/2` predicate prevents the program from running.
  - **Probabilistic Reasoning:** Not applicable.
  - **Neural Network Integration:** Not used.

- **Edge Cases:**
  - The absence of `member/2` is a critical oversight.
  - The program assumes the input is a list of houses, but no checks are in place for non-list inputs.

---

#### **7. Error Summary**

| Number | Problem                          | Impact                          | Suggestion                          |
|--------|----------------------------------|---------------------------------|-------------------------------------|
| 1      | Missing `member/2` predicate     | Program cannot execute          | Define `member/2` or import it.    |
| 2      | No input validation              | Potential runtime errors        | Add checks for list input.          |

---

#### **8. Suggested Fixes**
1. **Define `member/2`:**
   ```prolog
   member(X, [X|_]).
   member(X, [_|T]) :- member(X, T).
   ```
2. **Add Input Validation:**
   Ensure the input to `houses/1` is a list of 5 houses.

---

#### **9. Conclusion**
The current implementation fails due to the missing `member/2` predicate. Once this is resolved, the program should be re-evaluated for logical correctness and adherence to the puzzle's constraints. No probabilistic or DeepProbLog features are used in this code. 

**Word Count:** ~400 words.